Per device settings
Issue #434

Added new `settings` property to `device` which contains `batchMode`, `pipeline` and `filters`. Each of those has `options` and `default` and these are respected by the UI.

See documentation for more details.

* Updated server and client to accommodate `device.settings` - this had various architectural impacts which have been resolved; such as:
  * UserOptions now taking a parameter to aid unit tests
  * Custom object merging for manually added devices
  * Injecting the settings themselves
* Added some assertions to the server `Request`
* Tidied up Vue scan component where computed properties not available
* Fixed zip thumbnail error
